--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <section id="about">
     <div class="container">
       <h2>About Us</h2>
-      <img src="images/1664610069440.jpg" alt="Headshot" class="headshot-img">
+      <img src="image/1664610069440.jpg" alt="Headshot" class="headshot-img">
       <p>
         Founded by Wouter de Wit - off the back of 20 years of working at the intersection of Strategy and Operations - Half Moon Rising was established to serve the growing needs within organisations in navigating the complexities of succession planning and its implementation. Having completed his MBA with a specialization in Entrepreneurship at the UCT Graduate School of Business and with research focussed on "Co-creating Impactful Succession Plans", Wouter is leveraging his Strategic, Ideation, and Adaptability strengths to discovers ways to unlock untapped potential in every business or organisation that is prepared to take the time to observe with purpose.
       </p>
