--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Small Business Site</title>
+  <title>Half Moon Rising</title>
   <style>
     /* Reset margins/padding */
     * { margin: 0; padding: 0; box-sizing: border-box; }
